Agregar autenticación de usuarios y registro.

--- a/WebApplication1/GestionTaller-Back/appsettings.json
+++ b/WebApplication1/GestionTaller-Back/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=db;Database=GestionTallerDB;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
   },
+  "Jwt": {
+    "Key": "YourSuperSecretKey12345678901234567890",
+    "Issuer": "GestionTallerAPI",
+    "Audience": "GestionTallerClient",
+    "ExpiryInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
